# test_hc

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml
dnas/test_float/workdir/: dna.yaml
dnas/test_float/zomes/coordinator/float_rounding/: Cargo.toml
dnas/test_float/zomes/coordinator/float_rounding/src/: all_float_rounding_entries.rs  dummy_entry.rs  float_rounding_entry.rs  lib.rs
dnas/test_float/zomes/integrity/float_rounding/: Cargo.toml
dnas/test_float/zomes/integrity/float_rounding/src/: dummy_entry.rs  float_rounding_entry.rs  lib.rs
dnas/test_hc/workdir/: dna.yaml  test_hc.dna
dnas/test_hc/zomes/coordinator/test_hc/: Cargo.toml
dnas/test_hc/zomes/coordinator/test_hc/src/: lib.rs
dnas/test_hc/zomes/integrity/test_hc/: Cargo.toml
tests/: package.json
tests/src/test_float/float_rounding/: all-float-rounding-entries.test.ts  common.ts  dummy-entry.test.ts  float-rounding-entry.test.ts
ui/: .gitignore  package.json  pnpm-lock.yaml
ui/src/: App.svelte  contexts.ts
ui/src/test_float/float_rounding/: AllFloatRoundingEntries.svelte  CreateDummyEntry.svelte  CreateFloatRoundingEntry.svelte  DummyEntryDetail.svelte  FloatRoundingEntryDetail.svelte  types.ts
workdir/: happ.yaml  web-happ.yaml
