[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.3-beta-rc.0"
hdk = "=0.1.3-beta-rc.1"
holochain_integrity_types = "=0.1.3-beta-rc.0"
serde = "1"

[workspace.dependencies.float]
path = "dnas/test_float/zomes/coordinator/float"

[workspace.dependencies.float_integrity]
path = "dnas/test_float/zomes/integrity/float"

[workspace.dependencies.float_rounding]
path = "dnas/test_float/zomes/coordinator/float_rounding"

[workspace.dependencies.float_rounding_integrity]
path = "dnas/test_float/zomes/integrity/float_rounding"
