[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.2"
hdk = "=0.3.2"
serde = "1.0"

[workspace.dependencies.test_hc]
path = "dnas/test_hc/zomes/coordinator/test_hc"

[workspace.dependencies.test_hc_integrity]
path = "dnas/test_hc/zomes/integrity/test_hc"
