[package]
name = "float_rounding"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "float_rounding"

[dependencies]
hdk = { workspace = true }
holochain_integrity_types = { workspace = true }

serde = { workspace = true }

float_rounding_integrity = { workspace = true } 
